aws/projects/Project-002-Milliseconds-Converter/cfn-template-ASG.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: |
      CloudFormation Template for Milliseconds Converter Application. This template creates Python Flask Web Application on Amazon Linux 2 (XXXXXXXXXXXXXXXXX) EC2 Instance and Application Load Balancer with Auto Scaling Group of Amazon Linux 2 EC2 Instances within default VPC allowing http connections on port 80 and SSH connection on port 22. Milliseconds Application is downloaded from Github repository, then installed on Flask.
Parameters:
  YunusVPC:
    Description: VPC Id of your existing account
    Type: AWS::EC2::VPC::Id
  YunusSubnets:
    Description: List of Subnet Ids in your VPC. Please select at least 2 of them.
    Type: List<AWS::EC2::Subnet::Id>
  KeyName:
    Description: Select your key pair from the list
    Type: AWS::EC2::KeyPair::KeyName
  YunusInstanceType:
    Description: Select the instance type for your web server.
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t3.micro
      - t3a.micro
      - t2.nano
      - t3.nano
Resources:
  YunusSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enables SSH and HTTP ports #required
      SecurityGroupIngress: 
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      VpcId: !Ref YunusVPC

  
  YunusALBTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 25
      HealthCheckTimeoutSeconds: 5
      HealthyThresholdCount: 3
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 3
      VpcId: !Ref YunusVPC


  ELBofMilliseconds:
    Type: AWS::ElasticLoadBalancing::LoadBalancer
    Properties:
      Instances:
        - t2.micro
      Listeners: #required
        -   InstancePort: '80'
            LoadBalancerPort: '80'
            Protocol: 'tcp'
      LoadBalancerName: Milliseconds LB 
      SecurityGroups:
        - !Ref YunusSecGroup

  YunusLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:
        KeyName: !Ref KeyName
        ImageId: !FindInMap 
          - RegionImageMap
          - !Ref AWS::Region
          - AMI
        UserData: !Base64 |
            #!/bin/bash
            yum update -y
            yum install -y python3
            yum install flask -y
                    cd /home/ec2-user
        FOLDER="https://raw.githubusercontent.com/serdarcw/Project-001-Roman-Numerals-Converter/master"
        wget $FOLDER/app.py
        wget -P templates $FOLDER/templates/index.html
        wget -P templates $FOLDER/templates/result.html
        python3 app.py
        SecurityGroupIds:
          - !Ref CallSecGroup
        InstanceType: !Ref CallInstanceType

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: Milliseconds Auto Scaling Group
      AvailabilityZones:
        -  Fn::GetAZs: !Ref 'AWS::Region' 
      DesiredCapacity: '2'
      HealthCheckGracePeriod: 90
      HealthCheckType: ELB 
      LaunchTemplate:
        LaunchTemplateId: !Ref YunusLaunchTemplate
      LoadBalancerNames:
        - String
      MaxSize: '3' #required
      MinSize: '1' #required
